<resources>
    <string name="app_name">lab2phonedatabase</string>
    <string name="clear_all_data">Clear All Data\n</string>
    <string name="tvTitle">Phone DataBase\n</string>
    <string name="tvNamePhone">Manufacturer</string>
    <string name="tvModelPhone">Model\n</string>
    <string name="tvAndroidVersion">Android Version\n</string>
    <string name="tvWebSite">Web Site\n</string>
    <string name="phone_name_empty">Nazwa telefonu nie może być pusta</string>
    <string name="web_site">Web Site</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_save">Save</string>
    <string name="phone_model_empty">Model telefonu nie może być pusty</string>
    <string name="phone_version_empty">Wersja Androida nie może być pusta</string>
    <string name="phone_website_empty">Adres strony internetowej nie może być pusty</string>
    <string name="website_field_is_empty">Website field is empty</string>
</resources>