<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNamePhone"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etPhoneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
  </TableRow>

  <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvModelPhone"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etModelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
  </TableRow>

  <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAndroidVersion"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etAndroidVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
  </TableRow>

  <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvWebSite"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableLayout>
  </TableRow>


  <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/tableRow">

    <Button
        android:id="@+id/btWebSite"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/web_site"
        app:layout_constraintBaseline_toBaselineOf="@+id/btCancel"
        app:layout_constraintEnd_toStartOf="@+id/btCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCancel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/bt_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btSave"
        app:layout_constraintStart_toEndOf="@+id/btWebSite" />

    <Button
        android:id="@+id/btSave"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/bt_save"
        app:layout_constraintBottom_toBottomOf="@+id/btCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCancel"
        app:layout_constraintTop_toTopOf="@+id/btCancel" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</TableLayout>